objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Experience_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Salary__c</fullName>
        <label>Max Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PositionID__c</fullName>
        <displayFormat>POS-{0000}</displayFormat>
        <label>Position ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>